# Renderer

./: CMakeLists.txt  OpenGl.cbp  OpenGl.depend  OpenGl.layout  README.md  main.cpp  test.cpp
Assets/characters/: female1.sif  male.sif
app/: main
data/Shader/: simple.glsl
include/: Log.h  Shader.h  Window.h
include/KHR/: khrplatform.h
include/glad/: glad.h
src/: Log.cpp  Shader.cpp  Window.cpp  glad.c
